--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   installer:
     build: .
@@ -16,6 +14,15 @@ services:
     volumes:
       - mongo-data:/data/db
 
+  mongo-express:
+    image: mongo-express
+    environment:
+      ME_CONFIG_BASICAUTH_USERNAME: wapper
+      ME_CONFIG_BASICAUTH_PASSWORD: wapper
+      ME_CONFIG_MONGODB_URL: mongodb://mongo:27017/
+    ports:
+      - "8081:8081"
+
   redis:
     image: redis:5-alpine
     ports:
@@ -28,7 +35,7 @@ services:
     environment:
       REDIS_HOSTS: local:redis:6379
     ports:
-      - "8081:8081"
+      - "8082:8082"
 
   wapi:
     build: .
